Fix video paths and favicon issues - Update PHONK folder references and add favicon.ico

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <a href="video-gallery.html" class="card" data-category="art">
                     <div class="card-image">
                         <video class="card-img" autoplay muted loop>
-                            <source src="phonk/0513 (1).mov" type="video/mp4">
+                            <source src="PHONK/0513 (1).mov" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
                     </div>
