Update project name from Tyope to Epic NFT

--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
                         <img src="tyope.png" alt="Tyope" class="card-img">
                     </div>
                     <div class="card-content">
-                        <h3 class="card-title">Tyope</h3>
+                        <h3 class="card-title">Epic NFT</h3>
                         <p class="card-description">nostalgic NFT collection</p>
                         <div class="card-tags">
                             <span class="tag">NFT</span>
-                            <span class="tag">in progress</span>
+                            <span class="tag">in progress</span> 
                         </div>
                     </div>
                 </a>
