Update portfolio content and styling

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     </div>
                     <div class="card-content">
                         <h3 class="card-title">IRL ART and MORE</h3>
-                        <p class="card-description">contact me fore more information</p>
+                        <p class="card-description">contact me for more information</p>
                         <div class="card-tags">
                             <span class="tag">Mixed Media</span>
                             <span class="tag">In progress</span>
