Fix typos: capitalize 'Nostalgic' and 'After Effects'

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     </div>
                     <div class="card-content">
                         <h3 class="card-title">Epic NFT</h3>
-                        <p class="card-description">nostalgic NFT collection</p>
+                        <p class="card-description">Nostalgic NFT collection</p>
                         <div class="card-tags">
                             <span class="tag">NFT</span>
                             <span class="tag">in progress</span> 
@@ -173,7 +173,7 @@
                         <span class="skill-tag">JavaScript</span>
                         <span class="skill-tag">React</span>
                         <span class="skill-tag">FL Studio</span>
-                        <span class="skill-tag">after effects</span>
+                        <span class="skill-tag">After Effects</span>
                         <span class="skill-tag">Design</span>
                         <span class="skill-tag">Illustration</span>
                         
